# zagora

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: android-verify.yml  release-latest.yml
docs/: ARCHITECTURE_AI.md
mobile/: README.md
mobile/android/: .gitignore  FONTS.md  IN_APP_ATTACH_RESEARCH.md  README.md  build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/com/followcat/zagora/: MainActivity.kt
mobile/android/app/src/main/java/com/followcat/zagora/data/: AttachConnectionInternals.kt  SettingsStore.kt  SshAttachRepository.kt  ZagoraRepository.kt
mobile/android/app/src/main/java/com/followcat/zagora/model/: Session.kt
mobile/android/app/src/main/java/com/followcat/zagora/net/: ZagoraApi.kt
mobile/android/app/src/main/java/com/followcat/zagora/ui/: AttachScreen.kt  AttachViewModel.kt  DesignTokens.kt  MainViewModel.kt  TerminalEmulator.kt  TerminalFontPack.kt  TerminalKeyMapper.kt  TerminalUiModels.kt  Theme.kt  ZagoraApp.kt
mobile/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
mobile/android/app/src/main/res/values/: strings.xml
mobile/android/scripts/: verify_android_env.sh
mobile/web/: README.md  app.js  dev_server.py  index.html  styles.css
tests/: test_commands.py  test_config.py  test_server.py
zagora/: __main__.py  cli.py  config.py  exec.py  registry.py  server.py
(+2 files in other folders)
